# Matilda

./: .gitignore  Classes and HDF5 mapping.xlsx  LICENSE.txt  LoadNexus.py  NXcanSAS_DSM.h5  Notes-TODOs.txt  README.md  ReadFlyscan.py  ReadTiled.py  SAXS.hdf  USAXS_step.h5  WAXS.hdf  convertFlyscan.py  convertSAS.py  convertUSAXS.py  convertflyscan.py  dictToHDF5.py  environment.yml  in-screen.sh  matilda-manage.pid  matilda-manage.sh  matilda.log.1  matilda.py  matilda.sh  processFlyscans.py  pyproject.toml  readTiled.py  readfromtiled.py  st-matilda.sh  start-matilda.sh  supportFunctions.py
CodeFragments/: FindGroupsWithAtrrAndItems.py  NexusDemoCode.py  appendNXcanSAS.py  desmearing.py  dictToHDF5.py  findJsonKey.py  hdf5_stuff.py  loadMappedComponenetsFromHDF5.py  loadPartOfHDF5InStructure.py  loadnexus.py  rebinData.py  smoothData.py  subtractSASdata.py  tiledCommunication.py
ControlData/: LaB6_45deg_poni.poni
ControlData/TestTiltData/: LaB6_tilt2_0044.hdf  LaB6_tilt4h_0046.hdf
Matilda/: convertSAS.py  convertUSAXS.py  matilda.py  readfromtiled.py  supportFunctions.py
TestData/: NXcanSAS_SMR.h5  SAXS.hdf  USAXS.h5  USAXS_step.h5  WAXS.hdf
TestData/CalibData/: description.md
TestData/TestTiltData/: LaB6_Normal_0042.hdf  LaB6_tilt1_0043.hdf  LaB6_tilt3h_0045.hdf  LaB6_tilt5comb_0047.hdf  LaB6_tilt6comb_0048.hdf  (+2 more)
matilda/: convertNikaTopyFAI.py  convertSAS.py  convertSWAXScalibrated.py  convertUSAXS.py  desmearing.py  developNew.py  developNewFlyscan.py  developNewSWAXS.py  hdf5code.py  matilda.py  readfromtiled.py  rebinData.py  supportFunctions.py
(+48 files in other folders)
